--- a/home.html
+++ b/home.html
@@ -16,7 +16,7 @@
 	<body>
 		
 		<div class="header_panel">
-			<div class="logo"><a href="home.html"><img src="images/logo.png"></a></div>
+			<div class="logo"><a href="#home"><img src="images/logo.png"></a></div>
 
 			<div class="menu">Menu</div>
 
@@ -34,7 +34,6 @@
 				</nav>
 			</div>
 			<div class="social_media">
-
 				<a href="https://www.facebook.com/vivek.agarwal.902"><i class="fa fa-facebook" aria-hidden="true"></i></a>
 				<a href="https://www.linkedin.com/in/vivek-agarwal-8bb877a3"><i class="fa fa-linkedin-square" aria-hidden="true"></i>
 				</a>
@@ -46,7 +45,7 @@
 		<div id="home" class="main_content">
 			<hr>
 			<div class="profile_pic">
-				<img src="images/dp.jpg">
+				<img src="images/dp.jpeg">
 			</div>
 			<div class="name_title">
 				HOME
@@ -462,18 +461,7 @@
 				
 			</section>
 
-
-
-
 	</div>
-
-
-
-
-
-
-
-
 	<div id="contact_me">
 
 		<div class="title_section">
@@ -487,23 +475,5 @@
 		</div>
 
 	</div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-	
-
-
 </body>
 </html>
